fix: english grammar

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
             Hi there.
           </h2>
           <p>
-            This site is mostly about my personal rant and some literature work i've read and some reviews as well
+            This site is mostly about my personal rant, some literature work i've read and some reviews as well
 
 
           </p>
