feat: more stations

--- a/layouts/radio/list.html
+++ b/layouts/radio/list.html
@@ -16,8 +16,9 @@
         <div class="station-list">
             <ul id="stationList">
                 <li data-index="0">Japanese</li>
-                <li data-index="1" class="active">Spotify</li>
-                <li data-index="2">Personal</li>
+                <li data-index="1" class="active">Pop and Indie</li>
+                <li data-index="2">Ghazal</li>
+                <li data-index="3">Bing Chilling</li>
             </ul>
         </div>
         <div class="radio-container">
