--- a/assets/css/head.css
+++ b/assets/css/head.css
@@ -620,12 +620,12 @@
   }
 
 
-  @media (max-width: 400px) {
+  @media (max-width: 1000px) {
 
     .headline {
-      font-size: 2.15rem;
+      font-size: 2rem;
     }
-  
+
     .nav {
       display: contents;
       flex-direction: column;
@@ -678,12 +678,18 @@
     }
   
     * {
-      font-size: 25px;
+      font-size: 18px;
     }
-  
+
+    .description {
+      color: var(--secondary-text-color);
+      margin: 0;
+      font-size:20px;
+  }
+    
     footer p,
     footer p a {
-      font-size: 13px;
+      font-size: 0.75rem;
     }
   
     article span {
